--- a/styles/login.css
+++ b/styles/login.css
@@ -113,3 +113,42 @@
     font-size: 1.0vw;
     cursor: pointer;
 }
+
+@media(max-width : 768px){
+    #login{
+        background:none;
+        border: none;
+    } 
+    #icon{
+        width: 30vw;
+    }
+    
+    .inputs{
+        margin-left: 100%;
+        width: 40vw;
+        font-size: 3vw;
+    }
+    #entrar{
+        margin-left: 100%;
+        width: 40vw;
+    }
+    #criarConta{
+        font-size: 2vw;
+        margin-right: -65vw;
+    }
+    #Registro{
+        margin-left: -25%;
+        width: 80vw;
+        font-size: 3vw;
+    }
+    #nome, #email, #senha, #registrar{
+        width: 40vw;
+    }
+    #registrar{
+        margin-left: 5%;
+        font-size: 3vw;
+    }
+    #voltarLogin{
+        font-size: 3vw;
+    }
+}
